<resources>
    <string name="pn_add_token">Add Token</string>
    <string name="pn_add_nft">Add NFT</string>
    <string name="pn_app_name">Particle Demo</string>
    <string name="pn_sdk_demo">Particle SDK Demo</string>
    <string name="pn_email_login">Email Login</string>
    <string name="pn_phone_login">Phone Login</string>
    <string name="pn_open_wallet">Open Wallet</string>
    <string name="pn_logout">Logout</string>
    <string name="pn_welcome">Welcome !</string>
    <string name="pn_api_reference">API Reference</string>
    <string name="pn_api_tips">Please check the DEMO source code</string>
    <string name="pn_auth_service">Auth Service</string>
    <string name="pn_wallet_service">Wallet Service</string>
    <string name="pn_api_service">API Service</string>
    <string name="pn_open_send_token">Open Send Token</string>
    <string name="pn_open_receive_token">Open Receive Token</string>
    <string name="pn_open_transaction_records">Open Transaction Records</string>
    <string name="pn_open_nft_details">Open NFT Details</string>
    <string name="pn_open_nft_send">Open NFT Send</string>sign_all_transaction
    <string name="pn_open_swap">Open Swap</string>sign_all_transaction
    <string name="pn_success">Success</string>
    <string name="pn_failed">Failed</string>
    <string name="pn_auth_tips">Just to demonstrate the functionality, you need to fill in the correct parameters in the source code to display the correct data</string>
    <string name="pn_solana">Solana</string>
    <string name="pn_ethereum">Ethereum</string>
    <string name="pn_ethereum_chains">EVM-Chains</string>
    <string name="pn_bsc">Bsc</string>
    <string name="pn_polygon">Polygon</string>
    <string name="pn_avalanche">Avalanche</string>
    <string name="pn_erc20_transfer">erc20Transfer</string>
    <string name="pn_erc20_approve">erc20Approve</string>
    <string name="pn_erc20_transferFrom">erc20TransferFrom</string>
    <string name="pn_erc721_safeTransferFrom">erc721SafeTransferFrom</string>
    <string name="pn_erc1155_safeTransferFrom">erc1155SafeTransferFrom</string>
    <string name="pn_custom_abi">customAbi</string>
    <string name="pn_rpc">RPC Demo</string>
    <string name="pn_read_contract">Read Contract</string>
    <string name="pn_write_contract">Write Contract</string>
    <string name="pn_deploy_contract">Deploy Contract</string>
    <string name="pn_wallet_tips">One Wallet Manages Multi-Chain Assets</string>
    <string name="pn_page1_tips">One Wallet Manages Multi-Chain Assets</string>
    <string name="pn_page2_tips">Online Data, Real-time Update</string>
    <string name="pn_page3_tips">A beautiful home for all your NFTs</string>
    <string name="pn_page4_tips">Make it easier to enter the blockchain world</string>
    <string name="pn_auth_demo">Auth Demo</string>
    <string name="pn_connect_demo">Connect Demo</string>
    <string name="pn_wallet_demo">Wallet Demo</string>
    <string name="pn_particle_wallet_demo">Particle Wallet Demo</string>
    <string name="pn_select_chain">Select Chain</string>
    <string name="pn_select_wallet">Select Wallet</string>
    <string name="pn_init">Init</string>
    <string name="pn_login">Login</string>
    <string name="pn_is_login">IsLogin</string>
    <string name="pn_is_login_async">IsLoginAsync</string>
    <string name="pn_get_address">Get Address</string>
    <string name="pn_get_userinfo">Get UserInfo</string>
    <string name="pn_fast_logout">Fast Logout</string>
    <string name="pn_sign_send_transaction">Sign And Send Transaction</string>
    <string name="pn_sign_transaction">Sign Transaction</string>
    <string name="pn_sign_message">Sign Message</string>
    <string name="pn_sign_all_transactions">Sign All Transactions</string>
    <string name="pn_sign_typed_data">Sign Typed Data</string>
    <string name="pn_set_chaininfo">Set ChainInfo</string>
    <string name="pn_set_chaininfo_sync">Set ChainInfo Sync</string>
    <string name="pn_get_chaininfo">Get ChainInfo</string>
    <string name="pn_open_account_security">Open Account And Security</string>
    <string name="pn_set_security_config">Set Security Account Config</string>
    <string name="pn_set_language">Set Language</string>
    <string name="pn_set_display_wallet">Set Display Wallet</string>
    <string name="pn_open_web_wallet">Open Web Wallet</string>
    <string name="pn_set_userinfo">Set UserInfo</string>
    <string name="pn_select_chain_please">Please Select Chain</string>
    <string name="pn_logout_success">Logout Success</string>
    <string name="pn_fastlogout_success">FastLogout Success</string>
    <string name="pn_fastlogout_failed">FastLogout Failed</string>
    <string name="pn_only_evm_support">only evm chain support!</string>
    <string name="pn_only_solana_support">only solana chain support!</string>
    <string name="pn_not_login">User Not Login!</string>
    <string name="pn_connect">Connect</string>
    <string name="pn_connect_wallet_connect">Connect WalletConnect</string>
    <string name="pn_disconnect">Disconnect</string>
    <string name="pn_verify">Verify</string>
    <string name="pn_import_mnemonic">Import Mnemonic</string>
    <string name="pn_import_private_key">Private Key</string>
    <string name="pn_is_connect">IsConnect</string>
    <string name="pn_wallet_ready_state">Wallet Ready State</string>
    <string name="pn_reconnect">Reconnect Wallet</string>
    <string name="pn_add_chain">AddEthereumChain</string>
    <string name="pn_switch_chain">SwitchEthereumChain</string>
    <string name="pn_connect_init_first">Please Init First</string>
    <string name="pn_faucet">Faucet</string>
</resources>