<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="isEvm"
            type="Boolean" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="left"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            tools:context="network.particle.demo.ui.MainActivity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="left"
                android:text="@string/pn_auth_service"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/pn_auth_tips"
                android:textColor="@color/redPrimary" />

            <Button
                android:id="@+id/sign_send_transaction"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:text="@string/pn_sign_send_transaction" />

            <Button
                android:id="@+id/sign_transaction"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:text="@string/pn_sign_transaction"
                android:visibility="@{isEvm?View.GONE:View.VISIBLE}" />

            <Button
                android:id="@+id/sign_message"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:text="@string/pn_sign_message" />

            <Button
                android:id="@+id/sign_all_transaction"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:text="@string/pn_sign_all_transactions"
                android:visibility="@{isEvm?View.GONE:View.VISIBLE}" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="@{isEvm?View.VISIBLE:View.GONE}">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="left"
                    android:text="@string/pn_api_service"
                    android:textColor="@android:color/black"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/erc20_transfer"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/pn_erc20_transfer" />

                <Button
                    android:id="@+id/erc20_approve"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/pn_erc20_approve" />

                <Button
                    android:id="@+id/erc20_transferFrom"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/pn_erc20_transferFrom" />

                <Button
                    android:id="@+id/erc721_safeTransferFrom"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/pn_erc721_safeTransferFrom" />

                <Button
                    android:id="@+id/erc1155_safeTransferFrom"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/pn_erc1155_safeTransferFrom" />

                <Button
                    android:id="@+id/custom_abi"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/pn_custom_abi" />

                <Button
                    android:id="@+id/rpc"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/pn_rpc" />

                <Button
                    android:id="@+id/readContract"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/pn_read_contract" />

                <Button
                    android:id="@+id/writeContarct"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/pn_write_contract" />

                <Button
                    android:id="@+id/deployContract"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/pn_deploy_contract" />
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="left"
                android:text="@string/pn_wallet_service"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/open_wallet"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:text="@string/pn_open_wallet" />

            <Button
                android:id="@+id/open_send_token"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:text="@string/pn_open_send_token" />

            <Button
                android:id="@+id/open_receive_token"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:text="@string/pn_open_receive_token" />

            <Button
                android:id="@+id/open_transaction_records"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:text="@string/pn_open_transaction_records" />

            <Button
                android:id="@+id/open_nft_details"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:text="@string/pn_open_nft_details" />

            <Button
                android:id="@+id/open_nft_send"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:text="@string/pn_open_nft_send" />

            <Button
                android:id="@+id/open_swap"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:text="@string/pn_open_swap" />
        </LinearLayout>

    </ScrollView>
</layout>
