<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />


    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="10dp"
            app:liftOnScroll="false">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:elevation="0dp"
                android:paddingStart="0dp"
                android:paddingEnd="8dp"
                app:buttonGravity="center_vertical"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/twotone_arrow_back_24"
                app:title="@string/pn_api_service" />


        </com.google.android.material.appbar.AppBarLayout>

        <com.scwang.smart.refresh.layout.SmartRefreshLayout
            android:id="@+id/srl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:srlEnablePureScrollMode="true">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                android:overScrollMode="never">

                <LinearLayout
                    android:id="@+id/login_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:orientation="vertical"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    tools:context="network.particle.demo.ui.MainActivity">


                    <Button
                        android:id="@+id/erc20_transfer"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/pn_erc20_transfer" />

                    <Button
                        android:id="@+id/erc20_approve"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/pn_erc20_approve" />

                    <Button
                        android:id="@+id/erc20_transferFrom"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/pn_erc20_transferFrom" />

                    <Button
                        android:id="@+id/erc721_safeTransferFrom"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/pn_erc721_safeTransferFrom" />

                    <Button
                        android:id="@+id/erc1155_safeTransferFrom"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/pn_erc1155_safeTransferFrom" />

                    <Button
                        android:id="@+id/custom_abi"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/pn_custom_abi" />

                    <Button
                        android:id="@+id/rpc"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/pn_rpc" />

                    <Button
                        android:id="@+id/readContract"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/pn_read_contract" />

                    <Button
                        android:id="@+id/writeContarct"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/pn_write_contract" />

                    <Button
                        android:id="@+id/deployContract"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/pn_deploy_contract" />

                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </com.scwang.smart.refresh.layout.SmartRefreshLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
