<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="isEvm"
            type="Boolean" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="10dp"
            app:liftOnScroll="false">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:elevation="0dp"
                android:paddingStart="0dp"
                android:paddingEnd="8dp"
                app:buttonGravity="center_vertical"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/twotone_arrow_back_24"
                app:title="@string/pn_wallet_service" />


        </com.google.android.material.appbar.AppBarLayout>

        <com.scwang.smart.refresh.layout.SmartRefreshLayout
            android:id="@+id/srl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:srlEnablePureScrollMode="true">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                android:overScrollMode="never">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp">


                    <Button
                        android:id="@+id/open_wallet"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/pn_open_wallet" />

                    <Button
                        android:id="@+id/open_send_token"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/pn_open_send_token" />

                    <Button
                        android:id="@+id/open_receive_token"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/pn_open_receive_token" />

                    <Button
                        android:id="@+id/open_transaction_records"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/pn_open_transaction_records" />

                    <Button
                        android:id="@+id/open_nft_details"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/pn_open_nft_details" />

                    <Button
                        android:id="@+id/open_nft_send"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/pn_open_nft_send" />

                    <Button
                        android:id="@+id/open_swap"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/pn_open_swap" />
                </LinearLayout>

            </androidx.core.widget.NestedScrollView>
        </com.scwang.smart.refresh.layout.SmartRefreshLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
